Added custom routes for pages

--- a/railsample/app/views/blogs/show.html.erb
+++ b/railsample/app/views/blogs/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Title:</strong>
   <%= @blog.title %>
+  <p><%= @blog.body %></p>
 </p>
 
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
