--- a/railsample/app/views/blogs/_form.html.erb
+++ b/railsample/app/views/blogs/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :title, id: :blog_title %>
   </div>
 
+  <div class="field">
+    <%= form.label :body %>
+    <%= form.text_area :body, id: :blog_body %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
